# augur

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/agents/: deep-research-agent.md
.claude/rules/: code-style.md  subagent-orchestration.md  testing.md
.claude/skills/deep-research/: SKILL.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_heterogeneous.cpp  bench_imm.cpp  bench_kalman.cpp
cmake/: get_cpm.cmake
docs/: ARCHITECTURE.md  GETTING_STARTED.md  IMPROVEMENT_PLAN.md  PLUGIN_GUIDE.md  PRODUCTION_ROADMAP.md  ROADMAP.md
examples/: CMakeLists.txt
examples/01_basic_cv_tracking/: main.cpp
examples/02_imm_maneuvering_target/: main.cpp
examples/03_custom_plugin_model/: main.cpp
examples/04_heterogeneous_imm/: main.cpp
examples/05_current_statistical/: main.cpp
examples/06_sage_husa_adaptive/: main.cpp
examples/07_data_association/: main.cpp
examples/08_track_lifecycle/: main.cpp
examples/09_gm_phd/: main.cpp
examples/10_unscented_kalman/: main.cpp
examples/11_particle_filter/: main.cpp
examples/12_out_of_sequence/: main.cpp
examples/13_latency_compensation/: main.cpp
examples/14_sensor_fusion/: main.cpp
examples/15_reflection_serialization/: main.cpp
examples/16_linear_drag_ballistic/: main.cpp
examples/17_coordinated_turn_3d/: main.cpp
include/augur/: augur.hpp
include/augur/core/: concepts.hpp  config.hpp  state_component.hpp
include/augur/filters/: current_statistical_filter.hpp  extended_kalman.hpp  filter_concept.hpp  kalman.hpp  observe_position.hpp  particle_filter.hpp  sage_husa.hpp  unscented_kalman.hpp
include/augur/filters/adaptive/: sage_husa.hpp
include/augur/imm/: augmented_layout.hpp  estimator.hpp  heterogeneous_estimator.hpp  heterogeneous_mixing.hpp  mixing.hpp  mode_matrix.hpp
include/augur/math/: backend.hpp  interop_glm.hpp
include/augur/models/: constant_acceleration.hpp  constant_velocity.hpp  coordinated_turn.hpp  coordinated_turn_3d.hpp  current_statistical.hpp  linear_drag_ballistic.hpp  model_concept.hpp  singer.hpp
include/augur/plugin/: concepts.hpp  registry.hpp
include/augur/predict/: latency_compensation.hpp  query.hpp
include/augur/reflect/: descriptor.hpp  has_reflection.hpp  serialize.hpp
include/augur/reflect/backends/: pfr_backend.hpp  vector_backend.hpp
include/augur/track/: association.hpp  fusion.hpp  gm_phd.hpp  out_of_sequence.hpp  track_manager.hpp
include/augur/utils/: assert.hpp  fixed_vector.hpp  ring_buffer.hpp  timing.hpp  type_traits.hpp  xoshiro256pp.hpp
tests/: CMakeLists.txt
tests/unit/: test_association.cpp  test_constant_acceleration.cpp  test_coordinated_turn.cpp  test_coordinated_turn_3d.cpp  test_current_statistical.cpp  test_filter_config.cpp  test_fixed_vector.cpp  test_fusion.cpp  test_gm_phd.cpp  test_helpers.hpp  test_heterogeneous_imm.cpp  test_imm_mixing.cpp  test_kalman_cv.cpp  test_latency_compensation.cpp  test_linear_drag_ballistic.cpp  test_observe_position.cpp  test_out_of_sequence.cpp  test_particle_filter.cpp  test_plugin_registry.cpp  test_predict_query.cpp  test_reflection_serialization.cpp  test_ring_buffer.cpp  test_safe_inverse.cpp  test_sage_husa.cpp  test_singer.cpp  test_track_manager.cpp  test_unscented_kalman.cpp  test_xoshiro256pp.cpp
